compiler/testData/multiplatform/missingOverload/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/missingOverload/jvm.kt:1:14: error: 'actual class Foo : Any' has no corresponding members for expected class members:

    expect fun f(a: Any): Unit

    The following declaration is incompatible because parameter types are different:
        actual fun f(s: String): Unit

actual class Foo {
             ^
